# yodatranslator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/yodatranslator/: __main__.py  translator.py
