[metadata]
name = yodatranslator-pkg-donpolaco
version = 0.0.5
author = donpolaco
author_email = paszczap@poczta.fm
description = A simple command line translator English to Yoda-language
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/donpolaco/yodatranslator
project_urls =
    Repository = https://github.com/donpolaco/yodatranslator
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests >= 2.0
include_package_data = True
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yodatranslator = yodatranslator.__main__:main

